src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>APPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member of the APPG?</description>
        <label>APPG?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATS_Level__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainers Level</inlineHelpText>
        <label>ATS Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Group_notes__c</fullName>
        <label>Action Group notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Groups__c</fullName>
        <label>Action Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Educating unpaid and paid workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice of pwd and carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designing care-beginning to end of life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencing commissioning environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good care - make sure people know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data on outcomes and performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public campaign - living well - dementia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Action_plan_notes__c</fullName>
        <label>Action plan notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Health_Information__c</fullName>
        <label>Additional Health Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_notes__c</fullName>
        <label>Additional notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_ID_Other__c</fullName>
        <description>From PCA / RM</description>
        <label>Address ID Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_ID_Primary__c</fullName>
        <description>From PCA / RM</description>
        <label>Address ID Primary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Quality__c</fullName>
        <formula>IF( Address_Validated_Primary__c ,&apos;Address Validated&apos;,IF( MailingStreet  = NULL, &apos;Address Blank&apos;,&apos;Address Entered&apos;))</formula>
        <label>Address Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCA Feature</description>
        <label>Address Validated Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCA Feature</description>
        <label>Address Validated Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advance_Directives__c</fullName>
        <label>Advance Directives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_contributed__c</fullName>
        <label>Amount contributed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_assessed__c</fullName>
        <label>Application assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_recieved__c</fullName>
        <label>Application recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approximate_date_of_diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approximate date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate_Quality__c</fullName>
        <formula>IF(  ISBLANK(Birthdate), &apos;Date of Birth Blank&apos;, IF( Date_of_Birth_Estimated__c,&apos;Date of Birth Estimated&apos;,&apos;Date of Birth Not Estimated&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Outline_of_Personal_History__c</fullName>
        <inlineHelpText>Details recorded here will be visible to ALL CRS users. Please take care not to put sensitive or confidential information in this section</inlineHelpText>
        <label>Brief Outline of Personal History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_sent__c</fullName>
        <label>Certificate sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_aware_of_diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>yydelClient aware of diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_reference_number__c</fullName>
        <description>System generated unique reference number across all People.</description>
        <displayFormat>P{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Person ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <inlineHelpText>Seek signed consent as soon as possible. Services cannot be delivered unless verbal consent at least, has been obtained.</inlineHelpText>
        <label>Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed Verbal Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed Indicated Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proxy Consent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Service User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Constituency_Area__c</fullName>
        <formula>CASE(  Constituency__r.Area__c,
&quot;Eastern&quot;, &quot;Eastern&quot;,
&quot;East Midlands&quot;, &quot;East Midlands&quot;,
&quot;London&quot;, &quot;London&quot;,
&quot;North East&quot;, &quot;North East&quot;,
&quot;Northern Ireland&quot;, &quot;Northern Ireland&quot;,
&quot;North West&quot;, &quot;North West&quot;,
&quot;Scotland&quot;, &quot;Scotland&quot;,
&quot;South East&quot;, &quot;South East&quot;,
&quot;South West&quot;, &quot;South West&quot;,
&quot;Wales&quot;, &quot;Wales&quot;,
&quot;West Midlands&quot;, &quot;West Midlands&quot;,
&quot;Yorkshire and Humberside&quot;, &quot;Yorkshire and Humberside&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituency Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Derived__c</fullName>
        <description>Used on Record Types PWD and Carer to hold the Constituency derived from Postcode lookup.</description>
        <label>Postcode Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Email__c</fullName>
        <label>Constituency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Constituency_Region__c</fullName>
        <formula>CASE( Constituency__r.Region__c ,
&quot;Westminster Constituency - England&quot;, &quot;England&quot;,
&quot;Westminster Constituency - Northern Ireland&quot;, &quot;Northern Ireland&quot;,
&quot;Westminster NEW Constituency - Scotland&quot;, &quot;Scotland&quot;,
&quot;Westminster Constituency - Wales&quot;, &quot;Wales&quot;, &quot;&quot;)</formula>
        <label>Constituency Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_Website__c</fullName>
        <label>Constituency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituency</label>
        <referenceTo>Constituency__c</referenceTo>
        <relationshipLabel>MPs</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>hyperlink (&quot;/&quot; &amp;Id, LastName &amp; &quot;, &quot; &amp; FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please choose Contact Type</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Associate Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_consent_Date__c</fullName>
        <label>Date consent obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_Estimated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date of Birth Estimated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Change_of_Living_Arrangements__c</fullName>
        <label>Date of Change of Living Arrangements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_diagnosis__c</fullName>
        <inlineHelpText>This is required if a diagnosis has been given. If full date of diagnosis is unknown, enter it to the nearest year or month (e.g. 01/01/1945 if diagnosis year is 1945; or 01/08/1945 if diagnosis date is estimated). Then tick ‘Approximate Date’ box</inlineHelpText>
        <label>Date of diagnosis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_referral__c</fullName>
        <label>Date of referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To set a person as deceased please use the Person Wizard.</inlineHelpText>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dementia_Action_Alliance_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dementia Action Alliance member.</description>
        <inlineHelpText>Please check if the contact is a Dementia Action Alliance member.</inlineHelpText>
        <label>Dementia Action Alliance member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dementia_Friend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dementia Friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Details__c</fullName>
        <inlineHelpText>For additional details about dementia diagnosis. This is required if ‘Other’ is selected from the ‘Dementia Diagnosis’ list.</inlineHelpText>
        <label>Diagnosis Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <inlineHelpText>Only to be used for CONFIRMED diagnosis of dementia.</inlineHelpText>
        <label>Dementia diagnosis</label>
        <picklist>
            <picklistValues>
                <fullName>Alzheimer’s disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binswanger’s disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia with Lewy bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down’s syndrome related dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronto-Temporal dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV related dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huntington’s disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korsakoff’s syndrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkinson’s disease related dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick’s disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prion disease including CJD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None - Awaiting Diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None - Other Mild Cognitive Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please list)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mild Cognitive Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_made_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Diagnosis made by</description>
        <inlineHelpText>To record which professional made the diagnosis. Do NOT just type in name – A Professional already entered on the system must be found, selected and inserted by using the Look-Up function (magnifying glass icon).</inlineHelpText>
        <label>Diagnosis made by</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Professional / Stakeholder</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Diagnosis made by)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EEA_Advised__c</fullName>
        <description>Field created to report on those advised of outside EEA data storage.</description>
        <label>EEA Advised</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Easting__c</fullName>
        <label>Easting</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Phone__c</fullName>
        <label>Emergency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_number__c</fullName>
        <description>Volunteers</description>
        <inlineHelpText>Arena HR number</inlineHelpText>
        <label>Employee number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <inlineHelpText>The Employment Status of the person. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <inlineHelpText>The Ethnic group the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Ethnic Group</label>
        <picklist>
            <picklistValues>
                <fullName>White: English / Welsh / Scottish / Northern Irish / British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White: Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White: Gypsy or Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White: Other White background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: White and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed: Other Mixed / multiple ethnic background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian: Other Asian background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black: Other Black / African / Caribbean background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other: Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ethnic group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White English / Welsh / Scottish / Northern Irish / British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Gypsy or Irish Traveller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed / multiple ethnic group: White and Black Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed / multiple ethnic group: White and Black African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed / multiple ethnic group: White and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other mixed / multiple ethnic background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian / Asian British: Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian / Asian British: Pakistani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian / Asian British: Bangladeshi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicitiy__c</fullName>
        <description>Ethnic background of the client</description>
        <inlineHelpText>Ethnic background of the client. The client does not have to answer</inlineHelpText>
        <label>Ethnicitiy</label>
        <picklist>
            <controllingField>Ethnic_Group__c</controllingField>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All republics which made up the former USSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any other group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian and Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltic States (Estonian, Latvian or Lithuanian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladeshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black and White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese and White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commonwealth of (Russian) Independent States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cypriot (part not stated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East African Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filipino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek Cypriot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gypsy/Romany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iranian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faith_Culture__c</fullName>
        <inlineHelpText>The Faith and Culture group the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Faith/Culture</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atheist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baptist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buddhist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church of England / Wales / Scotland / Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islam / Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jehovah&apos;s Witness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Methodist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthodox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi / Zorastrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pentecostal / Church of God / Church of Christ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rastafarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roman Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seventh Day Adventist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Reformed / Presbyterian / Congregational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_language__c</fullName>
        <inlineHelpText>The language they prefer to use MUST be entered. If not in list, select ‘OTHER’ and include in ‘Specialist Communication Needs’ box.</inlineHelpText>
        <label>Preferred language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algerian Spoken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amharic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awadhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani, North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani, South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarusan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhojpuri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cebuano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Cantonese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Gan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Hakka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Jinyu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Min Bei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Min Nan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Wu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Xiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittagonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deccan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egyptian Spoken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_APPG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former APPG</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>